--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div class="footer-container">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p>Email:....@....com</p>
+                <p>Email:info@jandcbuilders.com</p>
                 <p>Phone: 07930354274 / 07909618537</p>
-                <p>Address:104 Hatton Road, Feltham, TW14 8JQ, United Kingdom</p>
+                <p>Address:104 Hatton Road, Feltham, TW14 8JQ</p>
             </div>
             <div class="footer-content">
                 <h3>Quick Links</h3>
@@ -65,7 +65,6 @@
                  <li><a href=""><i class="fab fa-facebook"></i></a></li>
                  <li><a href=""><i class="fab fa-twitter"></i></a></li>
                  <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                 <li><a href=""><i class="fab fa-linkedin"></i></a></li>
                 </ul>
                 </div>
         </div>
