--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div class="footer-container">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <h4>Email: info@jandcbuilders.com</h4>
-                <h4>Phone: 07930354274 / 07909618537</h4>
-                <h4>Address:104 Hatton Road, Feltham, TW14 8JQ</h4>
+                <p>Email: info@jandcbuilders.com</p>
+                <p>Phone: 07930354274 / 07909618537</p>
+                <p>Address:104 Hatton Road, Feltham, TW14 8JQ</p>
             </div>
             <div class="footer-content">
                 <h3>Quick Links</h3>
