--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <div class="footer-container">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p>Email: info@jandcbuilders.com</p>
+                <hr></hr>
+                <h4>Email: info@jandcbuilders.com</h4>
+                <p></p>
                 <p>Phone: 07930354274 / 07909618537</p>
                 <p>Address:104 Hatton Road, Feltham, TW14 8JQ</p>
             </div>
