--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="footer-container">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p>Email:....@....com</p>
+                <p>   Email: info@jandcbuilders.com</p>
                 <p>Phone: 07930354274 / 07909618537</p>
                 <p>Address:104 Hatton Road, Feltham, TW14 8JQ, United Kingdom</p>
             </div>
