--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="footer-container">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p> Email: info@jandcbuilders</p>
-                <p>Phone: 07930354274 /  07909618537</p>
+                <p> Email: info@jandcbuilders.com</p>
+                <pre>                   Phone: 07930354274 / 07909618537</pre>
                 <p>Address:104 Hatton Road, Feltham, TW14 8JQ, United Kingdom</p>
             </div>
             <div class="footer-content">
