--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <header class="hero">
         <div class="contact-info">
-            <span><i class="fas fa-phone"></i> +123 456 7890</span>
-            <span><i class="fas fa-envelope"></i> contact@yourwebsite.com</span>
+            <span><i class="fas fa-phone"></i> +44 7930354274</span>
+            <span><i class="fas fa-envelope"></i> info@jandcbuilders.com</span>
         </div>
     </header>
 
@@ -45,8 +45,10 @@
         <div class="footer-container">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p>Email:....@....com</p>
-                <p>Phone: 07930354274 / 07909618537</p>
+                <br>
+                <pre>                   Email: info@jandcbuilders.com</pre>
+                <br>
+                <pre>                   Phone: 07930354274 / 07909618537</pre>
                 <p>Address:104 Hatton Road, Feltham, TW14 8JQ, United Kingdom</p>
             </div>
             <div class="footer-content">
